force-app/main/default/objects/FEC_Ward__c/FEC_Ward__c.object-meta.xml
<CustomObject>
    <label>Ward</label>
    <nameField>
        <label>Ward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>