force-app/main/default/objects/FEC_Ward__c/fields/FEC_District__c.field-meta.xml
<CustomField>
    <fullName>FEC_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>FEC_District__c</referenceTo>
    <relationshipLabel>Wards</relationshipLabel>
    <relationshipName>Wards</relationshipName>
    <type>Lookup</type>
</CustomField>