force-app/main/default/objects/FEC_Ward__c/fields/FEC_District_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_District_Code__c</fullName>
    <label>District Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>