force-app/main/default/objects/FEC_Ward__c/fields/FEC_Province__c.field-meta.xml
<CustomField>
    <fullName>FEC_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>FEC_Province__c</referenceTo>
    <relationshipLabel>Wards</relationshipLabel>
    <relationshipName>Wards</relationshipName>
    <type>Lookup</type>
</CustomField>